Вторая версия проекта

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Raleway" sans-serif;
+    font-family: "Raleway", sans-serif;
     color: #213053;
     margin: 0;
 }
@@ -19,7 +19,14 @@ button {
     cursor: pointer;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
+    transition: background-color 0.3 ease-in;
   }
+
+button:hover {
+    background-color: #f6980c;
+    box-shadow:  0 16px 36px rgba(246 152 12 / 20%);
+}
+
 a {
     text-decoration: none;
     color: #213053;
@@ -29,7 +36,7 @@ header a {
     font-weight: 600;
     margin-right: 25px;
 }
-.header_logo {
+.header__logo {
     height: 30px;
 }
 
@@ -62,15 +69,121 @@ header a {
     margin-top: 20px;
 }
 
-.about_sun-image {
+.about__sun-image {
     width: 100px;
     height: 100px;
 }
 
-.about_image {
+.about__image {
     width: 500px;
 }
 
-.about_info {
+.about__info {
     max-width: 550px;
+}
+
+.form__conteiner {
+    width: 550px;
+}
+
+.form {
+    background-color:  #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form h1 {
+    font-size: 48px;
+}
+
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    grid-gap: 20px;
+}
+
+.form form {
+    
+    display: grid;
+    margin-top: 60px;
+}
+
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+}
+
+.form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 15px;
+    border: none;
+    appearance: none;
+    outline: none;
+}
+
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+footer {
+    padding: 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__copyright {
+    padding-top: 90px;
+    text-align: center;
+    opacity: 0.5;
+}
+
+.footer__group {
+    padding-right: 80px;
+}
+
+.footer__group h3 {
+    font-size: 16px;
+    opacity: 0.7;
+    padding-bottom: 30px;
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__links a {
+    padding-bottom: 15px;
 }
